style.css
html, body {
    height: 100vh;
    overflow: hidden;
}

img {
    margin: auto;    
    display: block;
}

body {
    font-family: Helvetica, Arial, sans serif;
}

.bg {
    background-color: black;
}

.jumbo-center {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    background:transparent !important;
}

.cont-center {
    margin-left: 2vh; 
    margin-right: 2vh;
}

.icon {
    opacity: 0;
}

.icon-name {
    font-family: 'Noto Sans', sans-serif; 
    color: white;
    opacity: 0;
}

.email {
    font-family: 'Noto Sans', sans-serif; 
    color: white;
    opacity: 0;
}

.ml11 {
    font-weight: 900;
    color: white;
    font-size: 6vw;
    margin-bottom: 3vh;
  }
  
.ml11 .text-wrapper {
    position: relative;
    display: inline-block;
    padding-top: 0.1em;
    padding-right: 0.05em;
    padding-bottom: 0.15em;
}

.ml11 .line {
    opacity: 0;
    position: absolute;
    left: 0;
    height: 100%;
    width: 3px;
    background-color: #fff;
    transform-origin: 0 50%;
}

.ml11 .line1 { 
    top: 0; 
    left: 0;
}

.ml11 .letter {
    display: inline-block;
    line-height: 1em;
}

